[package]
name = "hackatom"
version = "0.9.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]

[dependencies]
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
wasmer-runtime-core = "=0.17.0"
wasmer-middleware-common = "=0.17.0"
wasmer-singlepass-backend = "=0.17.0"

# Uncomment this block to see the bug
# wasmer-runtime-core = "=0.17.1"
# wasmer-middleware-common = "=0.17.1"
# wasmer-singlepass-backend = "=0.17.1"
